Revert "Update Scripture.css to handle c:v references"
This reverts commit 31b902ae534e0c897f24f658c8fedbe188b406a3.

--- a/DistFiles/Styles/Scripture/Scripture.css
+++ b/DistFiles/Styles/Scripture/Scripture.css
@@ -28,7 +28,7 @@
     margin-left: 0pt;
     padding-right: 2pt;
     float: left;
-    string-set: chapter content();
+    string-set: chapter content() ":";
 }
 
 .crossHYPHENReference::footnote-call {
@@ -313,7 +313,7 @@ span {
     vertical-align: super;
     text-indent: 0pt;
     margin-left: 0pt;
-    string-set: verse string(chapter) ':' content();
+    string-set: verse content();
 }
 .Verse_Number_In_Note {
     vertical-align: super;
@@ -321,13 +321,7 @@ span {
     margin-left: 0pt;
 }
 .Verse_Number1 {
-    font-size:1pt;
-    vertical-align: super;
-    text-indent: 0pt;
-    margin-left: 0pt;
-    string-set: verse string(chapter) ':1';
-	display: inline;
-	visibility: hidden;
+    display: none;
 }
 .Front_Matter {
 margin-left : 48pt;
